MicroEmulator

- target build depends on build.properties configuration: 
    target = app | applet

0.3.1 (alpha) - 21.11.2002
- device display is better customizable
- many fixes in ChoiceGroup (Shane Harper)
- app: fixed NullPointerException when run ME without initial MIDlet
- app: defined Main-Class in the MANIFEST.MF file - running also by java -jar

0.3 (alpha) - 29.08.2002
- created custom device framework (currently applet and j2se)
- default device has color display
- added minimum device profile sample
- app: changing device profiles on-the-fly

0.2 (alpha) - 3.04.2002
- MIDP/CLDC API finished (with javax.microedition.io.* currently http only)
- handled computer keyboard input
- many invisible fixes

0.1.3 (pre-alpha) - 1.02.2002
- framework for javax.microedition.io.* (implementation to be written)
- better look of phone device
- application can load MIDlet based on definition in JAD file
- changed license to LGPL

0.1.2 (pre-alpha) - 23.11.2001
- included NanoXML
- moved device preference into XML file (device.txt)
- implemented javax.microedition.rms.*
- implemented javax.microedition.lcdui.* - synchronization is not done
- written simple MIDP/CLDC demo showing functionality of emulator

0.1.1 (pre-alpha) - 30.08.2001
- javax.microedition.lcdui.* API completed but DateField, Gauge, Ticker not implemented
  and some methods of other classes may be empty, incompete exceptions throwing
- change from BW to 256-grayscale display
- bug fixes

0.1 (pre-alpha) - 23.07.2001
- no javax.microedition.io.* implementation
- only framework of java.microedition.rms package
- DateField, Gauge, Ticker in javax.microedition.lcdui.* should be implemented
- many methods of other classes are missing and incomplete (exceptions throwing)
