@@ -2,3 +2,6 @@
 # - applet : applet environment
 # - app : standalone application
 target = app
+
+# only for applet (true|false)
+target.applet.obfuscate = true
